# salesagent

./: .beads  .covered_uc002.txt  .covered_uc003.txt  .creative-agent-catalog.json  .cz-config.md  .dockerignore  .duplication-baseline  .env.example  .env.template  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .pre-commit-coverage-map.yml  .ruff-complexity-baseline  .semgrepignore  .zizmor-preflight.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  IPR_POLICY.md  Makefile  README.md  SECURITY.md  __docker-compose.override.yml  demo_html5_creative.py  diagnose_formats.py  docker-compose.e2e.ports.yml  docker-compose.e2e.yml  docker-compose.multi-tenant.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  mypy.ini  openapi.json  openapi.yaml  product_coverage.json  pyproject.toml  (+11 more)
.ast-grep/rules/: .gitkeep  _placeholder.yml  placeholder.yml
.beads/: .migration-hint-ts  beads.db  beads.db-shm  beads.db-wal  issues.jsonl  last-touched  sync-state.json
.beads/hooks/: pre-push
.claude/: agent-memory  research  settings.json
.claude/agents/: executor.md
.claude/commands/: obligation-team.md  research.md  team.md
.claude/formulas/: bdd-fix-batch.yaml  bdd-mapping.yaml  bug-triage.yaml  entity-remediate.yaml  entity-test-surface.yaml  integration-from-stub.yaml  migration-audit.yaml  obligation-test.yaml  structural-guard.yaml  task-execute.yaml  task-single.yaml  verify-spec.yaml
.claude/memory/: MEMORY.md  feedback_minimal_changes.md  feedback_no_test_changes.md
.claude/notes/: adcp-4.3-to-5.7-changeset.md  bdd-3.1-migration-handoff.md  bdd-audit-handoff.md  bdd-strict-marker-cleanup-proposal.md  deferred-prs-1312-1260.md  e2e-rest-xpass-reconciliation.md  go-layered-architecture-proposal.md  handoff-bdd-strict-cleanup.md  issue-draft-async-adapter-architecture.md  media-buy-validation-slice-map.md  merge-main-handoff-final.md  merge-main-handoff.md  pr-1420-review-handoff.md  pr1389-review-followups.md  pr1417-reply-draft.md  pr1417-reply-rereview.md  pr1417-review-handoff-20260629.md  pr1546-adcp-3.1.1-grounding.md  sdk-v4.3-transport-analysis.md  session-2026-07-08-1417-review-fixes.md  session-2026-07-10-1545-merge-and-rereview.md  session-gh8p-errorcode-reconciliation-20260621.md  session-pr1417-rereview-batch2-20260701.md  session-pr1430-execute-handoff-20260709.md  step3-validate-business-rules-scope.md  upstream-pr-typed-responses.md  (+1 more)
.github/: CODEOWNERS  LINK_VALIDATION_CI.md  dependabot.yml  dependency-review-config.yml  zizmor.yml
.guard-baselines/: fixme_bootstrap.json  hardcoded_admin_paths.json  module_scope_create_app.json  no_direct_env_access.json  no_flask_imports.json  no_form_getlist.json  no_module_level_engine.json  no_werkzeug_imports.json  templates_url_for_unknown_names.json
.pre-commit-hooks/: check-gam-auth-support.py  check_code_duplication.py  check_docs_links.py  check_full_suite_before_push.py  check_hardcoded_urls.py  check_import_usage.py  check_migration_completeness.py  check_mypy_untyped_defs_count.py  check_repo_invariants.py  check_ruff_complexity_count.py  check_sqlalchemy_2_0.py  check_tenant_context_order.py  check_type_ignore_count.py  count_ratchet.py
alembic/: env.py
core/: README.md  idempotency.py  main.py
deployment/: config.json  deployment.md  deployment.mk
docs/: APPROACH_COMPARISON_REPORT.md  ARCHITECTURE_TRANSFORMATION_REPORT.md  PRODUCT_INVENTORY_DATA_FLOW_DIAGRAM.md  PRODUCT_INVENTORY_TARGETING_DATA_FLOW.md  README-NGINX.md  SETUP.md  V2_ROADMAP_SUGGESTION.md  adcp-field-mapping.md  adcp-spec-version.md  deployment.md  index.md  pricing-migration-plan.md  quickstart.md  schema-migration-impact.md  schema-migration-plan.md  schema-updates.md  schema-validation-findings.md  security.md  spec-compliance-gaps.md  test-debt-bdd-strict-markers.md  validator-analysis.md  validator-fixes-needed.md
examples/: upstream_quickstart.py
fly/: nginx.conf
product_catalog_providers/: ai.py  database.py  signals.py
schemas/: README.md
scripts/: README.md  a2a_query.py  add_covers_tags.py  analyze_routes.py  analyze_validators.py  audit_migration_counts.py  bdd-pipeline.sh  bdd_traceability_schema.py  capture-rendered-names.sh  check_admin_route_coverage.py  check_dormant_scenarios.py  check_schema_sync.py  check_scoped_coverage.py  check_test_mocking.py  cleanup_docker.sh  cleanup_legacy_products.py  codemod_script_root_to_url_for.py  compare_bdd_runs.py  compare_schemas.py  compile_bdd.py  creative-agent-stack.sh  detect_misrouted_transport.py  enumerate_bdd_issues.py  export_openapi.py  fix_adcp_version_in_schemas.py  gen-agent-index.py  generate_frontend_types.py  generate_schemas.py  graduate_pending.py  initialize_tenant_mgmt_api_key.py  list_custom_domains.py  reclassify_obligations.py  refresh-creative-catalog.py  refresh-reference-formats.py  refresh_adcp_schemas.py  refresh_schemas.py  run-test.sh  run_server.py  run_tests.py  run_tests.sh  (+19 more)
signatures/: ipr-signatures.json
src/: __init__.py  app.py
templates/: _fastapi_error.html  account_detail.html  accounts_list.html  add_inventory_profile.html  add_product.html  add_product_gam.html  add_product_mock.html  authorized_properties_list.html  authorized_properties_upload.html  authorized_properties_upload.html.deprecated  base.html  buyer_routing.html  choose_tenant.html  create_account.html  create_principal.html  creative_agents.html  creative_management.html  edit_inventory_profile.html  edit_product.html  edit_product_mock.html  error.html  gam_line_item_viewer.html  index.html  inventory_browser.html  inventory_capabilities.html  inventory_profiles_list.html  inventory_unified.html  login.html  media_buy_approval.html  media_buy_detail.html  media_buys_list.html  orders_browser.html  policy_review.html  policy_rules.html  policy_settings.html  policy_settings_comprehensive.html  product_inventory_config.html  products.html  publishers.html  scheduling.html  (+16 more)
tests/: CLAUDE.md  README.md  a2a_helpers.py  conftest.py  conftest_db.py  coverage_scopes.yaml
tools/: validate_mcp_schemas.py
(+2773 files in other folders)
